# SPA

./: .gitmodules  .travis.yml  README.md
Team09/Code09/src/spa/: CMakeLists.txt
Team09/Code09/src/spa/src/: RPN.cpp  RPN.h
Team09/Code09/src/spa/src/Commons/: CommonLexer.cpp  CommonLexer.h  CommonToken.cpp  CommonToken.h
Team09/Code09/src/spa/src/PQL/: Optimizer.cpp  Optimizer.h  PQL.cpp  PQL.h  PQLLexer.cpp  PQLLexer.h  PQLParser.cpp  PQLParser.h  PQLToken.cpp  PQLToken.h  PQLTokenType.h  PQLTokeniser.cpp  PQLTokeniser.h  PQLUtils.cpp  Parser.cpp  Parser.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryResultProjector.cpp  QueryResultProjector.h  TokenType.h  Tokeniser.cpp  Tokeniser.h  WeightEstimator.cpp  WeightEstimator.h
Team09/Code09/src/spa/src/PQL/evaluators/: AffectsEvaluator.cpp  AffectsEvaluator.h  CallsEvaluator.cpp  CallsEvaluator.h  ClauseEvaluator.cpp  ClauseEvaluator.h  EntityEvaluator.cpp  EntityEvaluator.h  FollowsEvaluator.cpp  FollowsEvaluator.h  ModifiesEvaluator.cpp  ModifiesEvaluator.h  NextEvaluator.cpp  NextEvaluator.h  ParentEvaluator.cpp  ParentEvaluator.h  PatternAEvaluator.cpp  PatternAEvaluator.h  PatternAssignEvaluator.cpp  PatternAssignEvaluator.h  PatternConditionEvaluator.cpp  PatternConditionEvaluator.h  PatternEvaluator.h  PatternIfEvaluator.cpp  PatternIfEvaluator.h  PatternWhileEvaluator.cpp  PatternWhileEvaluator.h  ProcProcRelationshipEvaluator.cpp  ProcProcRelationshipEvaluator.h  RelationshipEvaluator.h  RelationshipEvaluatorInterface.h  SelectRefEvaluator.cpp  SelectRefEvaluator.h  StatementOnlyRelationshipEvaluator.cpp  StatementOnlyRelationshipEvaluator.h  StmtStmtRelationshipEvaluator.cpp  StmtStmtRelationshipEvaluator.h  StmtVarRelationshipEvaluator.cpp  StmtVarRelationshipEvaluator.h  TransitiveRelationshipEvaluator.h  (+7 more)
Team09/Code09/src/spa/src/evaluators/: FollowsEvaluator.h  ModifiesEvaluator.cpp  ModifiesEvaluator.h  ParentEvaluator.h  UsesEvaluator.h
Team09/Code09/src/spa/src/models/: AssignStatement.cpp  AssignStatement.h  AttributeRef.h  EntityType.h  OpimizerGroup.cpp  OpimizerGroup.h  OptimizerClause.cpp  OptimizerClause.h  OptimizerGraph.cpp  OptimizerGraph.h  OptimizerGroup.cpp  OptimizerGroup.h  OptimizerQuery.cpp  OptimizerQuery.h  Query.cpp  Query.h  QueryArgument.cpp  QueryArgument.h  QueryArgumentType.h  QueryClause.cpp  QueryClause.h  QueryClauseResult.cpp  QueryClauseResult.h  QueryClauseTable.cpp  QueryClauseTable.h  QueryPatternClause.cpp  QueryPatternClause.h  QueryRelationType.h  QueryResultTable.cpp  QueryResultTable.h  QuerySuchThatClause.cpp  QuerySuchThatClause.h  RelationRef.h  Statement.cpp  Statement.h
Team09/Code09/src/spa/src/models/optimizer/: OptimizerClause.cpp  OptimizerClause.h  OptimizerGraph.cpp  OptimizerGraph.h  OptimizerGroup.cpp  OptimizerGroup.h  OptimizerQuery.cpp  OptimizerQuery.h
Team09/Code09/src/spa/src/models/simple_parser/: AST.cpp  AST.h  AssignNode.cpp  AssignNode.h  BinaryOperator.h  CallNode.cpp  CallNode.h  ExprNodes.cpp  ExprNodes.h  IfNode.cpp  IfNode.h  IoNodes.cpp  IoNodes.h  Node.cpp  Node.h  NodeType.h  Operator.h  PredicateNodes.cpp  PredicateNodes.h  ProcedureNode.cpp  ProcedureNode.h  RootNode.cpp  RootNode.h  StmtNode.cpp  StmtNode.h  WhileNode.cpp  WhileNode.h
Team09/Code09/src/spa/src/pkb/: PKB.cpp  PKB.h
Team09/Code09/src/spa/src/pkb/evaluators/: ModifiesEvaluator.cpp  ModifiesEvaluator.h  UsesEvaluator.cpp  UsesEvaluator.h
Team09/Code09/src/spa/src/pkb/models/: AssignStatement.cpp  AssignStatement.h  QueryResultTable.cpp  QueryResultTable.h
Team09/Code09/src/spa/src/pkb/stores/: CallsStore.cpp  CallsStore.h  EntityStore.cpp  EntityStore.h  (+21 more)
Team09/Code09/src/spa/src/query_evaluator/: QueryEvaluator.cpp  QueryEvaluator.h  UsesEvaluator.h
Team09/Code09/src/spa/src/simple_parser/: CFGExtractor.cpp  CFGExtractor.h  CallStmtValidator.cpp  CallStmtValidator.h  DesignExtractor.cpp  DesignExtractor.h  DesignRelationships.cpp  DesignRelationships.h  EntityStager.cpp  EntityStager.h  Lexer.cpp  Lexer.h  NestableRelationships.cpp  NestableRelationships.h  Parser.cpp  Parser.h  SPLexer.cpp  SPLexer.h  SPManager.cpp  SPManager.h  SPParser.cpp  SPParser.h  SPToken.cpp  SPToken.h  Token.cpp  Token.h
Team09/Code09/src/spa/src/util/: CommonUtils.cpp  PKBUtils.cpp  QueryUtils.cpp  QueryUtils.h  RPN.cpp  RPN.h  RPNToken.cpp  RPNToken.h
Team09/Code09/src/unit_testing/: CMakeLists.txt
Team09/Code09/src/unit_testing/src/: TestRPN.cpp
Team09/Code09/src/unit_testing/src/PQL/: TestQueryResultProjector.cpp
Team09/Code09/src/unit_testing/src/models/: TestAST.cpp  TestOptimizerGraph.cpp  TestOptimizerGroup.cpp  TestOptimizerQuery.cpp
Team09/Code09/src/unit_testing/src/pkb/: TestEntityStore.cpp  TestFollows.cpp  TestFollowsStore.cpp  TestModifies.cpp  TestModifiesStore.cpp  TestParent.cpp  TestParentStore.cpp  TestPatternA.cpp  TestUses.cpp  TestUsesStore.cpp
Team09/Code09/src/unit_testing/src/simple_parser/: ComplexASTs.cpp  RelationshipASTs.h  RelationshipsASTs.cpp  TestCallStmtValidator.cpp  TestDesignExtractor.cpp  TestDesignExtractor_CFG.cpp  TestDesignExtractor_Calls.cpp  TestDesignExtractor_CallsT.cpp  TestDesignExtractor_Follows.cpp  TestDesignExtractor_FollowsT.cpp  TestDesignExtractor_Modifies.cpp  TestDesignExtractor_Parent.cpp  TestDesignExtractor_ParentT.cpp  TestDesignExtractor_Uses.cpp  TestEntityStager.cpp  TestLexer.cpp  TestParseAssign.cpp  TestParseCall.cpp  TestParseIf.cpp  TestParsePredicate.cpp  TestParsePrint.cpp  TestParseProcedure.cpp  TestParseRead.cpp  TestParseVariablesAndConstants.cpp  TestParseWhile.cpp  TestSPLexer.cpp  TestSPManager.cpp
Team09/Code09/src/unit_testing/src/util/: TestPKBUtils.cpp  TestQueryClauseTable.cpp  TestQueryResultTable.cpp  TestQueryUtils.cpp  TestRPN.cpp  TestRPNToken.cpp
Team09/Code09/src/unit_testing/tests/: sample_SIMPLE.txt
Team09/Code09/src/unit_testing/tests/simple_source/: Invalid_procedure_name.txt  invalid_no_curly_braces.txt  invalid_no_semicolon.txt  invalid_no_stmts.txt  invalid_symbols.txt  invalid_variable_name.txt  valid_SIMPLE.txt  valid_assign.txt  valid_print.txt  valid_read.txt
(+81 files in other folders)
